@@ -104,6 +104,11 @@ linux_mount_boot () {
 		if [ -n "$bootmnt" ]; then
 			set -- $bootmnt
 			boottomnt=""
+			if [ -x /target/bin/mount ]; then
+				smart_mount=/target/bin/mount
+			else
+				smart_mount=mount
+			fi
 			if [ -e "$1" ]; then
 				bootpart="$1"
 				boottomnt="$1"
@@ -116,7 +121,7 @@ linux_mount_boot () {
 			elif echo "$1" | grep -q "LABEL="; then
 				debug "mounting boot partition by label for linux system on $partition: $1"
 				label=$(echo "$1" | cut -d = -f 2)
-				if /target/bin/mount -L "$label" -o ro $tmpmnt/boot -t "$3"; then
+				if $smart_mount -L "$label" -o ro $tmpmnt/boot -t "$3"; then
 					mounted=1
 					bootpart=$(mount | grep $tmpmnt/boot | cut -d " " -f 1)
 				else
@@ -125,7 +130,7 @@ linux_mount_boot () {
 			elif echo "$1" | grep -q "UUID="; then
 				debug "mounting boot partition by UUID for linux system on $partition: $1"
 				uuid=$(echo "$1" | cut -d = -f 2)
-				if /target/bin/mount -U "$uuid" -o ro $tmpmnt/boot -t "$3"; then
+				if $smart_mount -U "$uuid" -o ro $tmpmnt/boot -t "$3"; then
 					mounted=1
 					bootpart=$(mount | grep $tmpmnt/boot | cut -d " " -f 1)
 				else
